--- a/index.html
+++ b/index.html
@@ -85,8 +85,229 @@
   </div>
   <div id="levelInfo" style="display:none;">Level 1</div>
   <script>
-    // JS bleibt unverändert (bereits korrekt und vollständig)
-    // ... (ganzer bestehender JavaScript-Code bleibt gleich)
+    // === Globale Variablen ===
+    const canvas = document.getElementById('tetris');
+    const ctx = canvas.getContext('2d');
+    const scoreEl = document.getElementById('score');
+    const levelEl = document.getElementById('level');
+    const menu = document.getElementById('menu');
+    const levelInfo = document.getElementById('levelInfo');
+    const gameOverOverlay = document.getElementById('gameOverOverlay');
+
+    const COLS = 10;
+    const ROWS = 20;
+    const BLOCK_SIZE = 24;
+
+    canvas.width = COLS * BLOCK_SIZE;
+    canvas.height = ROWS * BLOCK_SIZE;
+
+    let board = [];
+    let currentPiece;
+    let dropInterval = 1000;
+    let lastTime = 0;
+    let dropCounter = 0;
+    let score = 0;
+    let level = 1;
+    let isGameOver = false;
+
+    const pieces = 'TJLOSZI';
+
+    const colors = {
+      'T': 'purple',
+      'J': 'blue',
+      'L': 'orange',
+      'O': 'yellow',
+      'S': 'green',
+      'Z': 'red',
+      'I': 'cyan'
+    };
+
+    const tetrominos = {
+      'T': [
+        [0,1,0],
+        [1,1,1],
+        [0,0,0],
+      ],
+      'J': [
+        [1,0,0],
+        [1,1,1],
+        [0,0,0],
+      ],
+      'L': [
+        [0,0,1],
+        [1,1,1],
+        [0,0,0],
+      ],
+      'O': [
+        [1,1],
+        [1,1],
+      ],
+      'S': [
+        [0,1,1],
+        [1,1,0],
+        [0,0,0],
+      ],
+      'Z': [
+        [1,1,0],
+        [0,1,1],
+        [0,0,0],
+      ],
+      'I': [
+        [0,0,0,0],
+        [1,1,1,1],
+        [0,0,0,0],
+        [0,0,0,0]
+      ]
+    };
+
+    function createMatrix(w, h) {
+      const matrix = [];
+      while (h--) {
+        matrix.push(new Array(w).fill(0));
+      }
+      return matrix;
+    }
+
+    function drawMatrix(matrix, offset, type) {
+      matrix.forEach((row, y) => {
+        row.forEach((value, x) => {
+          if (value !== 0) {
+            ctx.fillStyle = colors[type];
+            ctx.fillRect((x + offset.x) * BLOCK_SIZE, (y + offset.y) * BLOCK_SIZE, BLOCK_SIZE, BLOCK_SIZE);
+            ctx.strokeStyle = '#111';
+            ctx.strokeRect((x + offset.x) * BLOCK_SIZE, (y + offset.y) * BLOCK_SIZE, BLOCK_SIZE, BLOCK_SIZE);
+          }
+        });
+      });
+    }
+
+    function merge(board, piece) {
+      piece.matrix.forEach((row, y) => {
+        row.forEach((value, x) => {
+          if (value !== 0) {
+            board[y + piece.pos.y][x + piece.pos.x] = piece.type;
+          }
+        });
+      });
+    }
+
+    function collide(board, piece) {
+      const m = piece.matrix;
+      const o = piece.pos;
+      for (let y = 0; y < m.length; y++) {
+        for (let x = 0; x < m[y].length; x++) {
+          if (m[y][x] !== 0 && (board[y + o.y] && board[y + o.y][x + o.x]) !== 0) {
+            return true;
+          }
+        }
+      }
+      return false;
+    }
+
+    function rotate(matrix) {
+      return matrix[0].map((_, i) => matrix.map(row => row[i])).reverse();
+    }
+
+    function playerDrop() {
+      currentPiece.pos.y++;
+      if (collide(board, currentPiece)) {
+        currentPiece.pos.y--;
+        merge(board, currentPiece);
+        resetPiece();
+        clearLines();
+      }
+      dropCounter = 0;
+    }
+
+    function clearLines() {
+      outer: for (let y = board.length - 1; y >= 0; y--) {
+        for (let x = 0; x < board[y].length; x++) {
+          if (board[y][x] === 0) {
+            continue outer;
+          }
+        }
+        const row = board.splice(y, 1)[0].fill(0);
+        board.unshift(row);
+        score += 100;
+        scoreEl.innerText = score;
+        if (score % 500 === 0) {
+          level++;
+          levelEl.innerText = level;
+          levelInfo.innerText = 'Level ' + level;
+          levelInfo.style.display = 'block';
+          setTimeout(() => levelInfo.style.display = 'none', 2000);
+          dropInterval *= 0.9;
+        }
+        y++;
+      }
+    }
+
+    function draw() {
+      ctx.fillStyle = '#000';
+      ctx.fillRect(0, 0, canvas.width, canvas.height);
+      drawMatrix(board, {x:0, y:0});
+      drawMatrix(currentPiece.matrix, currentPiece.pos, currentPiece.type);
+    }
+
+    function update(time = 0) {
+      const deltaTime = time - lastTime;
+      lastTime = time;
+      dropCounter += deltaTime;
+      if (dropCounter > dropInterval) {
+        playerDrop();
+      }
+      draw();
+      if (!isGameOver) {
+        requestAnimationFrame(update);
+      } else {
+        gameOverOverlay.style.display = 'block';
+      }
+    }
+
+    function resetPiece() {
+      const type = pieces[Math.floor(Math.random() * pieces.length)];
+      const matrix = tetrominos[type];
+      currentPiece = {
+        matrix: matrix,
+        pos: {x: Math.floor(COLS / 2) - Math.floor(matrix[0].length / 2), y: 0},
+        type: type
+      };
+      if (collide(board, currentPiece)) {
+        isGameOver = true;
+      }
+    }
+
+    function startGame() {
+      menu.style.display = 'none';
+      canvas.style.display = 'block';
+      score = 0;
+      level = 1;
+      dropInterval = 1000;
+      board = createMatrix(COLS, ROWS);
+      scoreEl.innerText = score;
+      levelEl.innerText = level;
+      isGameOver = false;
+      resetPiece();
+      update();
+    }
+
+    document.addEventListener('keydown', e => {
+      if (!currentPiece) return;
+      if (e.key === 'ArrowLeft') {
+        currentPiece.pos.x--;
+        if (collide(board, currentPiece)) currentPiece.pos.x++;
+      } else if (e.key === 'ArrowRight') {
+        currentPiece.pos.x++;
+        if (collide(board, currentPiece)) currentPiece.pos.x--;
+      } else if (e.key === 'ArrowDown') {
+        playerDrop();
+      } else if (e.key === 'ArrowUp') {
+        const rotated = rotate(currentPiece.matrix);
+        const old = currentPiece.matrix;
+        currentPiece.matrix = rotated;
+        if (collide(board, currentPiece)) currentPiece.matrix = old;
+      }
+    });
   </script>
 </body>
 </html>
