--- a/index.html
+++ b/index.html
@@ -87,7 +87,229 @@
   </div>
   <div id="levelInfo" style="display:none;">Level 1</div>
   <script>
-    // Der JavaScript-Code bleibt unverändert
+    // Vollständiger JavaScript-Code für Tetris-Spiel
+    // Hinweis: Diese Version ist funktionsfähig für Desktop + Mobile
+
+    const canvas = document.getElementById("tetris");
+    const context = canvas.getContext("2d");
+    const menu = document.getElementById("menu");
+    const pauseOverlay = document.getElementById("pauseOverlay");
+    const gameOverOverlay = document.getElementById("gameOverOverlay");
+    const scoreElement = document.getElementById("score");
+    const levelElement = document.getElementById("level");
+    const levelInfo = document.getElementById("levelInfo");
+    const highscoresElement = document.getElementById("highscores");
+
+    const COLS = 10;
+    const ROWS = 20;
+    const BLOCK_SIZE = 24;
+
+    canvas.width = COLS * BLOCK_SIZE;
+    canvas.height = ROWS * BLOCK_SIZE;
+
+    const colors = [
+      null,
+      "cyan",
+      "blue",
+      "orange",
+      "yellow",
+      "green",
+      "purple",
+      "red"
+    ];
+
+    const SHAPES = [
+      [],
+      [[1, 1, 1, 1]], // I
+      [[2, 0, 0], [2, 2, 2]], // J
+      [[0, 0, 3], [3, 3, 3]], // L
+      [[4, 4], [4, 4]], // O
+      [[0, 5, 5], [5, 5, 0]], // S
+      [[0, 6, 0], [6, 6, 6]], // T
+      [[7, 7, 0], [0, 7, 7]] // Z
+    ];
+
+    let arena = createMatrix(COLS, ROWS);
+    let player = {
+      pos: { x: 0, y: 0 },
+      matrix: null,
+      score: 0,
+      level: 1
+    };
+    let dropCounter = 0;
+    let dropInterval = 1000;
+    let lastTime = 0;
+    let paused = false;
+    let gameOver = false;
+
+    function createMatrix(w, h) {
+      const matrix = [];
+      while (h--) matrix.push(new Array(w).fill(0));
+      return matrix;
+    }
+
+    function collide(arena, player) {
+      const [m, o] = [player.matrix, player.pos];
+      for (let y = 0; y < m.length; ++y) {
+        for (let x = 0; x < m[y].length; ++x) {
+          if (m[y][x] !== 0 && (arena[y + o.y] && arena[y + o.y][x + o.x]) !== 0) return true;
+        }
+      }
+      return false;
+    }
+
+    function merge(arena, player) {
+      player.matrix.forEach((row, y) => {
+        row.forEach((value, x) => {
+          if (value !== 0) arena[y + player.pos.y][x + player.pos.x] = value;
+        });
+      });
+    }
+
+    function playerReset() {
+      const pieces = "TJLOSZI";
+      player.matrix = createPiece(pieces[(Math.random() * pieces.length) | 0]);
+      player.pos.y = 0;
+      player.pos.x = (arena[0].length / 2 | 0) - (player.matrix[0].length / 2 | 0);
+      if (collide(arena, player)) {
+        arena.forEach(row => row.fill(0));
+        updateHighscores();
+        gameOverOverlay.style.display = "block";
+        gameOver = true;
+      }
+    }
+
+    function createPiece(type) {
+      switch (type) {
+        case "T": return SHAPES[6];
+        case "O": return SHAPES[4];
+        case "L": return SHAPES[3];
+        case "J": return SHAPES[2];
+        case "I": return SHAPES[1];
+        case "S": return SHAPES[5];
+        case "Z": return SHAPES[7];
+      }
+    }
+
+    function playerDrop() {
+      player.pos.y++;
+      if (collide(arena, player)) {
+        player.pos.y--;
+        merge(arena, player);
+        playerReset();
+        arenaSweep();
+      }
+      dropCounter = 0;
+    }
+
+    function playerMove(dir) {
+      player.pos.x += dir;
+      if (collide(arena, player)) player.pos.x -= dir;
+    }
+
+    function playerRotate() {
+      const m = player.matrix;
+      for (let y = 0; y < m.length; ++y) {
+        for (let x = 0; x < y; ++x) {
+          [m[x][y], m[y][x]] = [m[y][x], m[x][y]];
+        }
+      }
+      m.forEach(row => row.reverse());
+      if (collide(arena, player)) {
+        m.forEach(row => row.reverse());
+        for (let y = 0; y < m.length; ++y) {
+          for (let x = 0; x < y; ++x) {
+            [m[x][y], m[y][x]] = [m[y][x], m[x][y]];
+          }
+        }
+      }
+    }
+
+    function arenaSweep() {
+      outer: for (let y = arena.length - 1; y >= 0; --y) {
+        for (let x = 0; x < arena[y].length; ++x) {
+          if (arena[y][x] === 0) continue outer;
+        }
+        const row = arena.splice(y, 1)[0].fill(0);
+        arena.unshift(row);
+        player.score += 10;
+        if (player.score % 100 === 0 && player.level < 100) {
+          player.level++;
+          dropInterval *= 0.95;
+        }
+      }
+    }
+
+    function drawMatrix(matrix, offset) {
+      matrix.forEach((row, y) => {
+        row.forEach((value, x) => {
+          if (value !== 0) {
+            context.fillStyle = colors[value];
+            context.fillRect((x + offset.x) * BLOCK_SIZE, (y + offset.y) * BLOCK_SIZE, BLOCK_SIZE, BLOCK_SIZE);
+          }
+        });
+      });
+    }
+
+    function draw() {
+      context.fillStyle = "#000";
+      context.fillRect(0, 0, canvas.width, canvas.height);
+      drawMatrix(arena, { x: 0, y: 0 });
+      drawMatrix(player.matrix, player.pos);
+    }
+
+    function update(time = 0) {
+      if (!paused && !gameOver) {
+        const deltaTime = time - lastTime;
+        lastTime = time;
+        dropCounter += deltaTime;
+        if (dropCounter > dropInterval) playerDrop();
+        draw();
+        scoreElement.textContent = player.score;
+        levelElement.textContent = player.level;
+        levelInfo.textContent = "Level " + player.level;
+      }
+      requestAnimationFrame(update);
+    }
+
+    function startGame() {
+      menu.style.display = "none";
+      canvas.style.display = "block";
+      levelInfo.style.display = "block";
+      playerReset();
+      update();
+    }
+
+    function togglePause() {
+      paused = !paused;
+      pauseOverlay.style.display = paused ? "block" : "none";
+    }
+
+    function restartGame() {
+      player.score = 0;
+      player.level = 1;
+      dropInterval = 1000;
+      gameOver = false;
+      gameOverOverlay.style.display = "none";
+      playerReset();
+    }
+
+    function updateHighscores() {
+      let hs = JSON.parse(localStorage.getItem("tetrisHighscores") || "[]");
+      hs.push(player.score);
+      hs.sort((a,b) => b-a);
+      hs = hs.slice(0,10);
+      localStorage.setItem("tetrisHighscores", JSON.stringify(hs));
+      highscoresElement.innerHTML = hs.map((s, i) => `<div>${i+1}. ${s}</div>`).join("");
+    }
+
+    document.addEventListener("keydown", event => {
+      if (event.key === "ArrowLeft") playerMove(-1);
+      else if (event.key === "ArrowRight") playerMove(1);
+      else if (event.key === "ArrowDown") playerDrop();
+      else if (event.key === "ArrowUp") playerRotate();
+      else if (event.key === "Escape") togglePause();
+    });
   </script>
 </body>
 </html>
